commit on 'main'

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         </form>
     </div>
     <div>
-        <form action="/login" method="post" class="p-3 col-4 mx-auto my-5 bg-dark text-light">
+        <form action="/login_user" method="post" class="p-3 col-4 mx-auto my-5 bg-dark text-light">
             <h2 class="text-center text-primary">Login:</h2>
             <div class="form-group">
                 <label for="email">Email:</label>
